turtleart.circlesquare.CircleSquare.scala.error
Compilation error:
CircleSquare:2: error: identifier expected but 'def' found.
def polygone(n:Int,x:Int) {
^