turtleart.circlesquare.CircleSquare.scala.code
Voici mon code :
def polygone(n:Int,x:Int) {
  for (i <- 1 to n) {
    avance(x);droite(360/n)
  }
}



override def run() {
  polygone(4,100)
}